# Quadruped_Rudy

./: .motor_calibration.yaml.swp  README.md  citations.txt  motor_calibration.yaml
DynamixelSDK/ros/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/ros/dynamixel_sdk_examples/src/: .read_write_node.cpp.swp
dynamixel_interfaces/: CMakeLists.txt
quadruped_behavior/: CMakeLists.txt  package.xml
quadruped_behavior/config/: motor_calibration.yaml  motor_params.yaml  static_poses.yaml
quadruped_behavior/launch/: calibrate.launch.xml  static_poses.launch.xml
quadruped_behavior/src/: Static_Position.cpp  Static_Position_Trot.cpp  calibrate.cpp
quadruped_control/: CMakeLists.txt  package.xml
rudy_description/: CMakeLists.txt  README.md  package.xml
rudy_description/launch/: launch_rudy.launch.xml
rudy_description/meshes/: Body_Link.stl  Body_Link_Collision.stl  DualMotor_Link.stl  Dual_Motor.stl  Dual_Motor_Collision.stl  Foot_Link.stl  Foot_Link_Collision.stl  Head_Link.stl  Head_Link_Collision.stl  Hip_Link.stl  Hip_Link_Collision.stl
rudy_description/urdf/: common_properties.urdf.xacro  rudy_us.urdf.xacro
rudylib/: CMakeLists.txt  README.md
rudylib/include/rudylib/: LegKinematics.hpp  RudyKinematics.hpp  angle.hpp
rudylib/src/: LegKinematics.cpp  RudyKinematics.cpp
rudylib/tests/: body_kinematics_test.cpp  leg_kinematics_test.cpp
